# snowman

./: README.md
apps/: CMakeLists.txt  detect-live.cpp  enroll-live.cpp  pulseaudio.h  pulseaudio.hh  pulseaudio_win.cpp  snowboy_compat.cpp
build-x64/: CMakeCache.txt
cmake/: FetchGoogleTest.cmake
lib/: CMakeLists.txt  char_to_string.cpp  feat-lib.cpp  framer-stream.cpp  frontend-lib.cpp  intercept-stream.h  matrix-wrapper.h  msvc_compat.h  snowboy-utils.cpp
resources/pmdl/: hey_casper.pmdl
test/: CMakeLists.txt  helper.cpp  helper.h
